This file shows a history of changes between PrBoom versions since v2.1.0.
For historical reference, the complete LxDoom changelog follows it.

Changes from v2.4.5 to v2.4.6
- Fixed "oof" sound when hitting ground while already dead
- Unified drawing functions, this speeds things up a bit and fixes most
  artifacts on small numbers and fonts in high resolution modes.
- Mac OS X: Add resolution and video mode (OpenGL vs software) selection to
  launcher
- Added rendering filters for software mode, they are configurable in a new
  page in general settings
- Emulate some texture composition bugs
- Fix more common WAD bugs that can cause crashes
- Fixed random crashes caused by use of uninitialized memory
- Fix some demo incompatibilities caused by slime trail removal
- Fixed crashes with WADs which use newer gl nodes or don't have any nodes
- Automatically load gwa files with gl nodes
- Fixed integer overrun in automap on large levels (from PrBoom+)

Changes from v2.4.4 to v2.4.5
- fix crash when saving the game in levels with lots of monsters
  (bug introduced in 2.4.4)
- -nodeh option to disable automatic loading of dehacked-in-wad lump
- Unified software and opengl engine into one binary
- Added video mode selection to menu
- fix demo desyncs on E1M5 on x86_64 systems
- Fullscreen setting will only take effect after game restart
- reduce red palette translation if the menu is up, so the menu can still be read
- screenshots now in PNG format on Linux/Unix in GL mode too
- Added experimental -checksum option for demo playback comparison
- Merged new internal patch (graphics) format from PrBoom 2.3
- Mac OS X: Launcher now uses drawers instead of tabs
- Mac OS X: Fix some longstanding Wad chooser issues
- Mac OS X: Add a console to display text output from PrBoom

Changes from v2.4.3 to v2.4.4
- Don't fail when a texture name can't be looked up
- Increased several limits - Thanks to entryway and RjY
  - Increased number of sidedef limit to 65534